--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hook-form": "^7.46.1",
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.15.0",
+    "react-scroll": "^1.8.9",
     "react-simple-typewriter": "^5.0.1",
     "svg.js": "^2.7.1",
     "typewriter-effect": "^2.20.1"
