--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server" : "npm run build && node ./server/index.js && npm run dev"
+
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.17.2",
@@ -19,7 +21,9 @@
     "animejs": "^3.2.1",
     "axios": "^1.5.1",
     "contentful": "^10.5.3",
+    "express": "^4.18.2",
     "framer-motion": "^10.16.4",
+    "fs": "^0.0.1-security",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
