--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "postbuild": "react-snap"
+    "preview": "vite preview"
 
   },
  
