--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
-
   },
- 
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.17.2",
     "@emotion/react": "^11.11.1",
@@ -22,12 +20,13 @@
     "axios": "^1.5.1",
     "contentful": "^10.5.3",
     "framer-motion": "^10.16.4",
+    "puppeteer": "^21.3.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.15.0",
-    "react-snap": "^1.23.0",
+    "react-snap": "^1.13.1",
     "svg.js": "^2.7.1",
     "typewriter-effect": "^2.20.1"
   },
@@ -43,8 +42,9 @@
     "vite": "^4.4.5"
   },
   "reactSnap": {
-    "inlineCss": true,
-    "source" : "./dist"
+    "source": "./dist"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
-
 }
