--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "animejs": "^3.2.1",
     "axios": "^1.5.1",
     "contentful": "^10.5.3",
+    "contentful-management": "^11.2.0",
     "framer-motion": "^10.16.4",
     "puppeteer": "^21.3.8",
     "react": "^18.2.0",
