added 'hello my name is:'

--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "@contentful/rich-text-react-renderer": "^15.17.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.4",
     "@use-gesture/react": "^10.3.0",
@@ -22,11 +27,11 @@
     "contentful": "^10.5.3",
     "contentful-management": "^11.2.0",
     "framer-motion": "^10.16.4",
-    "puppeteer": "^21.3.8",
     "react": "^18.2.0",
     "react-commentbox": "^3.0.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
+    "react-icons": "4.2.0",
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.15.0",
     "react-snap": "^1.13.1",
