--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.4",
+    "@preact/signals-react": "^1.3.6",
     "@use-gesture/react": "^10.3.0",
     "animejs": "^3.2.1",
     "axios": "^1.5.1",
