--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "predeploy": "react-snap"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.17.2",
@@ -34,7 +33,6 @@
     "react-icons": "4.2.0",
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.15.0",
-    "react-snap": "^1.13.1",
     "svg.js": "^2.7.1",
     "typewriter-effect": "^2.20.1"
   },
