--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.3",
+    "@mui/joy": "^5.0.0-beta.16",
     "@mui/material": "^5.14.4",
     "@preact/signals-react": "^1.3.6",
     "@use-gesture/react": "^10.3.0",
